Fixed image not showing error

--- a/style.css
+++ b/style.css
@@ -119,13 +119,13 @@ section div {
     flex-direction: column;
     align-items: center;
 }
-#latest-product, #trending-product, #sale-product{
+.latest-product, #trending-product, #sale-product{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding:10px 50px;
+    padding:10px 50px;  
 }
-#product-image,#trending-product-images, #sale-product-images, #latest-product-images{
+.product img{
     width:225px;
     height:225px;
     padding:20px 10px 0px 10px;
@@ -178,7 +178,7 @@ footer {
     width:250px;
     height: 70px;
 }
-#QR-Code {
+.QR-Code {
     border-radius: 25px;
     width: 250px;
     height: 250px;
